# pr2_object_manipulation

./: README.md
applications/pr2_create_object_model/: CMakeLists.txt  package.xml
applications/pr2_interactive_manipulation/: CMakeLists.txt  package.xml
applications/pr2_interactive_manipulation_frontend/: CMakeLists.txt  package.xml
applications/pr2_interactive_object_detection/: CMakeLists.txt  package.xml
applications/pr2_interactive_object_detection_frontend/: CMakeLists.txt  package.xml
applications/pr2_pick_and_place_demos/: CMakeLists.txt  package.xml
applications/pr2_tabletop_manipulation_launch/: CMakeLists.txt  package.xml
applications/tf_throttle/: CMakeLists.txt  package.xml
manipulation/pr2_gripper_grasp_controller/: CMakeLists.txt  package.xml
manipulation/pr2_gripper_grasp_planner_cluster/: CMakeLists.txt  package.xml
manipulation/pr2_gripper_reactive_approach/: CMakeLists.txt  package.xml
manipulation/pr2_gripper_sensor/: CMakeLists.txt  package.xml
manipulation/pr2_gripper_sensor_action/: CMakeLists.txt  package.xml
manipulation/pr2_gripper_sensor_controller/: CMakeLists.txt  package.xml
manipulation/pr2_gripper_sensor_msgs/: package.xml
manipulation/pr2_interactive_gripper_pose_action/: CMakeLists.txt  package.xml
manipulation/pr2_manipulation_controllers/: CMakeLists.txt  package.xml
manipulation/pr2_marker_control/: CMakeLists.txt  package.xml
manipulation/pr2_object_manipulation_launch/: CMakeLists.txt  package.xml
manipulation/pr2_object_manipulation_msgs/: CMakeLists.txt  package.xml
manipulation/pr2_wrappers/: CMakeLists.txt  package.xml
manipulation/rgbd_assembler/: CMakeLists.txt  package.xml
manipulation/segmented_clutter_grasp_planner/: CMakeLists.txt  package.xml
navigation/pr2_navigation_controllers/: CMakeLists.txt  package.xml
perception/interactive_perception_msgs/: CMakeLists.txt  package.xml
perception/object_recognition_gui/: CMakeLists.txt  package.xml
perception/robot_self_filter_color/: CMakeLists.txt  package.xml
perception/tabletop_collision_map_processing/: CMakeLists.txt  package.xml
perception/tabletop_object_detector/: CMakeLists.txt  package.xml
pr2_object_manipulation/: CMakeLists.txt  package.xml
