<package>
  <name>pr2_create_object_model</name>
  <version>1.0.0</version>
  <description>pr2_create_object_model</description>

  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>


  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_create_object_model</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kaijen Hsiao</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tabletop_object_detector</build_depend>
  <build_depend>object_manipulator</build_depend>
  <build_depend>tabletop_collision_map_processing</build_depend>
  <build_depend>common_rosdeps</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>actionlib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tabletop_object_detector</run_depend>
  <run_depend>object_manipulator</run_depend>
  <run_depend>tabletop_collision_map_processing</run_depend>
  <run_depend>common_rosdeps</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>tabletop_object_detector</test_depend> -->
  <!-- <test_depend>object_manipulator</test_depend> -->
  <!-- <test_depend>tabletop_collision_map_processing</test_depend> -->
  <!-- <test_depend>common_rosdeps</test_depend> -->

</package>
