<package>
  <name>pr2_interactive_object_detection_frontend</name>
  <version>1.0.0</version>
  <description>A package that allows a remote user to request and assist
     the detection, recognition and pose estimation of tabletop objects,
     primarily using an rviz display.</description>
 <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_interactive_object_detection_frontend</url>
  <!-- <url type="bugtracker"></url> -->

  <author>jbinney</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>pr2_interactive_object_detection</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>pr2_interactive_object_detection</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rviz</test_depend> -->
  <!-- <test_depend>pr2_interactive_object_detection</test_depend> -->

<export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
</export>

</package>
